# ChangeLog for dev-util/febootstrap
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Oct 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -febootstrap-2.6.ebuild:
  remove old

*febootstrap-2.10 ( 30 Oct 2010 )

  30 Oct 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +febootstrap-2.10.ebuild:
  new version

* febootstrap-2.7.ebuild

  31 Jul 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +febootstrap-2.7.ebuild:
  bump
