@@ -1,6 +1,8 @@
 DIST febootstrap-2.10.tar.gz 585680 RMD160 07ec1f3e8d4be83f6834807436e35bac19094cdf SHA1 92b0d1506c3f4361f2078a4c191df4f4d7c4b8a1 SHA256 94f6691e0bcf699dbeb22e44c1f440d24bc11d4a064d8079f3580b9e41956030
 DIST febootstrap-2.7.tar.gz 516193 RMD160 fe8b87070b5f5c2f0084b0d27b9028fefefbabd2 SHA1 4926cf07cb81c6ce1c3775f33cc9bb4d6c297a65 SHA256 bc2feb25abe55a04b8ba64794d2979384cbe98e94a299f14072e5b9b2803de86
+DIST febootstrap-2.8.tar.gz 545573 RMD160 bdf95ce81989352afe516be078cb9902c7d539cc SHA1 e8fe265cb16bc286c24facc4bed6a428ef174f0a SHA256 956cc16f2a193f229e3b9e5943003b63f45d835fe37a2a289f7e72ff3b0e7735
 EBUILD febootstrap-2.10.ebuild 688 RMD160 a276d0477cb4c2b27a707cf787fa367d46f3fde7 SHA1 fe5d3221bdbd87f01cb4beff9fab1caee61ac0e1 SHA256 b1be8184dc84ad838623d3d88318cc24949b95284ec3675b7b5c109de85d8ae4
 EBUILD febootstrap-2.7.ebuild 604 RMD160 c31e059c8e04f61eeae6dd643839f495a1991099 SHA1 3c61e7f9a37e4a5c2edae73ae2901655c6214fca SHA256 d9bf00fac282cd08d7725f6149f6d942f561658752a622eca4a2d80a4f7c4948
-MISC ChangeLog 460 RMD160 6f92767e3c4462a15412b96a2529c984241043e3 SHA1 0a0f3daf60c874b01ff614e5c47e7175bf5ab34d SHA256 64c493dbae9eb3bf5635d9942c3e0f6a935fa108732e03de5faddb309363ca2b
+EBUILD febootstrap-2.8.ebuild 604 RMD160 c31e059c8e04f61eeae6dd643839f495a1991099 SHA1 3c61e7f9a37e4a5c2edae73ae2901655c6214fca SHA256 d9bf00fac282cd08d7725f6149f6d942f561658752a622eca4a2d80a4f7c4948
+MISC ChangeLog 589 RMD160 2d2bc978ad788cfe2aac7fcecdbb381ec377216c SHA1 eed6b489528296166f901326735a45fd15b0cb50 SHA256 a6ee3c2223bde14ef0e5cb434d34c321f3c393210d97119170773b19882c3f58
 MISC metadata.xml 234 RMD160 999fab2c5a4c8873483e0398d546c46ba7db2244 SHA1 3d5a13a261145e4709af5370bea86199398cfe87 SHA256 dacedc07094188052fc35617485c22f7e7ea2914326c8df6a671fc6584930efc
