@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*febootstrap-2.8 (20 Nov 2010)
+
+  20 Nov 2010; A. Vinogradov <spamslepnoga@inbox.ru> +febootstrap-2.8.ebuild:
+  add 2.8 version
+
   30 Oct 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   -febootstrap-2.6.ebuild:
   remove old
